--- a/src/style.css
+++ b/src/style.css
@@ -61,10 +61,8 @@ button:focus-visible {
 }
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+  width: 100vw;
 }
 
 @media (prefers-color-scheme: light) {
