--- a/src/style.css
+++ b/src/style.css
@@ -62,7 +62,8 @@ button:focus-visible {
 
 #app {
   text-align: center;
-  width: 100vw;
+  width: 100%;
+  height: 100vh;
 }
 
 @media (prefers-color-scheme: light) {
